grammar.js
    source_file: $ => seq(
      repeat(seq($.import_decl, optional($._layout_end))),
      repeat(seq($._top_item, optional($._layout_end))),
    ),

    // ─── Imports ────────────────────────────────────────────────────────────

    import_decl: $ => seq('import', field('module', $.module_path)),
    module_path: $ => prec.left(seq($.upper_id, repeat(seq('.', $.upper_id)))),

    // ─── Top-level items ────────────────────────────────────────────────────

    // `prec.dynamic(2, ...)` here, paired with the same on `fun_def`,
    // biases tree-sitter to start a new top-level item rather than
    // extend whatever inner construct (type_app, app) is in progress.
    // This is the only knob that consistently makes
    //
    //     main : IO Never Unit
    //     main = ...
    //
    // parse as two siblings (signature + fun_def) instead of letting
    // the second `main` sink into the type expression.
    _top_item: $ => prec.dynamic(2, choice(
      $.empty_type_decl,
      $.type_decl,
      $.signature,
      $.fun_def,
    )),

    // `empty type X`. No type parameters, no constructors — that's the
    // whole point of the form (row identity, see compiler docs).
    empty_type_decl: $ => seq('empty', 'type', field('name', $.upper_id)),

    type_decl: $ => prec.right(seq(
      'type',
      field('name', $.upper_id),
      repeat(field('parameter', $.lower_id)),
      optional(seq('=', $._con_def_list)),
    )),

    _con_def_list: $ => seq($.con_def, repeat(seq('|', $.con_def))),
    // `prec.dynamic(1, ...)` biases tree-sitter to extend a constructor
    // definition rather than close it and start a new top-level item.
    // Without it, `type T = Just a` parses with `a` re-interpreted as a
    // sibling fun_def name, because both paths are syntactically valid
    // until layout context (which we don't track) decides for one of them.
    con_def: $ => prec.dynamic(1, prec.right(seq(
      field('name', $.upper_id),
      repeat($._type_atom),
    ))),

    signature: $ => seq(
      field('name', $._decl_name),
      ':',
      field('type', $._type),
    ),

    // `prec.dynamic(2, ...)` biases tree-sitter to start a new fun_def
    // (closing whatever signature came before) over extending the
    // signature's type with the new `name` token. Without it, the
    // canonical pattern
    //
    //     foo : Int32 -> Int32
    //     foo n = n
    //
    // parses with `foo` (the second one) absorbed as a type_app `arg`
    // because layout-blind tree-sitter cannot see the newline boundary.
    fun_def: $ => prec.dynamic(2, prec.right(seq(
      field('name', $._decl_name),
      repeat(field('parameter', $._param)),
      '=',
      field('body', $._expr),
    ))),

    // The bundled prelude spells the concat operator's binding as
    // `(++) = …` so hover / go-to-definition on `a ++ b` lands on the
    // same definition. Syntactically allowed in user code too, but
    // practically prelude-only.
    _decl_name: $ => choice($.lower_id, $.operator_name),
    _param: $ => choice($.lower_id, $._paren_pattern),
    _type: $ => choice(
      $.union_type,
      $.arrow_type,
      $.type_app,
      $._type_atom,
    ),
    arrow_type: $ => prec.right(2, seq(
      field('domain', $._type),
      '->',
      field('codomain', $._type),
    )),
    type_app: $ => prec.left(3, seq(
      field('callee', $._type),
      field('arg', $._type_atom),
    )),

    _type_atom: $ => choice(
      $.upper_id,
      $.lower_id,
      seq(alias($._paren_open, '('), $._type, alias($._paren_close, ')')),
    ),

    // ─── Expressions ────────────────────────────────────────────────────────

    // Expressions split into "wide" forms (lambda / let / do / case —
    // bodies extend right as far as possible) and "operator" forms.
    // Standard Tree-sitter idiom: each binary operator is one rule with
    // its own associativity + numeric precedence; the dispatch goes
    // through `_op_expr`.
    _expr: $ => choice(
      $.lambda,
      $.let_expr,
      $.do_block,
      $.case_expr,
      $._op_expr,
    ),

    _op_expr: $ => choice(
      $.pipe_expr,
      $.concat_expr,
      $.app,
      $._atom,
    ),

    pipe_expr: $ => prec.left(1, seq($._op_expr, '|>', $._op_expr)),
    app: $ => prec.left(3, seq($._op_expr, $._atom)),

    _atom: $ => choice(
      $.qname,
      $.upper_id,
      $.lower_id,
      seq(alias($._paren_open, '('), $._expr, alias($._paren_close, ')')),
      $.string,
      $.integer,
    ),

    // Qualified identifier: at least one `Mod.` prefix, then a lower id.
    // Disambiguated from a sequence of `Mod` atoms in App by the dot.
    qname: $ => seq(
      $.upper_id,
      '.',
      repeat(seq($.upper_id, '.')),
      $.lower_id,
    ),

    // ─── Patterns ───────────────────────────────────────────────────────────

    string: $ => token(seq(
      '"',
      repeat(choice(
        /\\[ntr"\\0]/,
        /[^"\\]+/,
      )),
      '"',
    )),

    // Optional leading '-' followed by digits with optional `_` separators
    // (no two consecutive '_' or trailing '_'; surface grammar enforces
    // that, but we accept loose forms here — the LSP catches semantically
    // invalid literals).
    lower_id: $ => /_[a-z][A-Za-z0-9_']*|[a-z][A-Za-z0-9_']*|_/,
    upper_id: $ => /_[A-Z][A-Za-z0-9_']*|[A-Z][A-Za-z0-9_']*/,

    line_comment: $ => token(seq('--', /[^\n]*/)),
    // Block comment — single regex token, non-greedy via a NEGATED
    // character class. The inner repeat `[^-]|-[^}]` matches any
    // char that isn't `-`, OR a `-` followed by a non-`}`; greedy
    // `*` stops at the first `-}` because neither alternative
    // matches `-`-followed-by-`}`. `-+\}` then consumes the
    // closing `-}` (with `-+` to absorb extra dashes like `--}`).
    //
    // DO NOT rewrite the inner repeat as `[\s\S]*?-\}` — see the
    // banner comment at the top of this file. The full why is
    // there with concrete examples.
    //
    // Nesting is NOT supported by this regex (Awsum doesn't
    // require it in v0).
